pkg/ibmvpc/examples/tgw_basic_example_all_vpcs_.txt
Connectivity between VPCs connected by TGW local-tg-ky (UID: crn:161)
ky-vpc1-vsi[10.240.0.5] => ky-vpc2-vsi[10.240.64.5] : All Connections
ky-vpc2-vsi[10.240.64.5] => ky-vpc1-vsi[10.240.0.5] : All Connections

Connectivity for VPC ky-vpc1
Public Internet (all ranges) => ky-vpc1-vsi[10.240.0.5] : All Connections
ky-vpc1-vsi[10.240.0.5] => Public Internet (all ranges) : All Connections

Connectivity for VPC ky-vpc2
